--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -8,6 +8,7 @@ body {
   background: #FAFBFC;
   padding: 0px;
   margin: 0px;
+  transform-origin: 50% 0;
   transform: scale(0.7984);
 }
 :focus {
@@ -26,6 +27,7 @@ body {
   border-radius: 19px;
 }
 .main-block {
+  position: relative;
   width: 960px;
   margin-left: auto;
   margin-right: auto;
