--- a/src/style/available.rooms.scss
+++ b/src/style/available.rooms.scss
@@ -1,3 +1,9 @@
+.buf1{
+  align-items: center;
+  color: #2F486A;
+  display: flex;
+}
+
 .title-row {
   @extend .main-info;
   position: relative;
@@ -47,9 +53,7 @@
   position: absolute;
   width: 186px;
   .name {
-    align-items: center;
-    color: #2F486A;
-    display: flex;
+    @extend .buf1;
     font-size: 13px;
     font-weight: 600;
     height: 18px;
@@ -61,7 +65,6 @@
 .nice-look-img {
   align-self: center;
   background: url(../static/nice.look.svg) no-repeat center;
-  background-size: cover;
   display: inline-block;
   height: 40px;
   position: relative;
@@ -73,7 +76,6 @@
 .kitchen-img {
   align-self: center;
   background: url(../static/kitchen.svg) no-repeat center;
-  background-size: cover;
   display: inline-block;
   height: 40px;
   position: relative;
@@ -85,7 +87,6 @@
 .refrigerator-img {
   align-self: center;
   background: url(../static/refrigerator.svg) no-repeat center;
-  background-size: cover;
   display: inline-block;
   height: 40px;
   position: relative;
@@ -98,7 +99,6 @@
 .wifi-img {
   align-self: center;
   background: url(../static/wifi.svg) no-repeat center;
-  background-size: cover;
   display: inline-block;
   height: 40px;
   position: relative;
@@ -112,7 +112,6 @@
 .no-smoking-room {
   align-self: center;
   background: url(../static/no-smoking-room.svg) no-repeat center;
-  background-size: cover;
   display: inline-block;
   height: 40px;
   position: relative;
@@ -161,9 +160,10 @@
         flex-direction: row;
         left: 0;
         order: 0;
-        padding: 8px 12px;
+        padding: 0 12px;
         position: static;
         top: 0;
+        height: 36px;
         .text {
           align-items: center;
           align-self: center;
@@ -287,9 +287,7 @@
         width: 960px;
       }
       .room-title {
-        align-items: center;
-        color: #2F486A;
-        display: flex;
+        @extend .buf1;
         font-size: 26px;
         font-weight: bold;
         height: 32px;
@@ -351,9 +349,7 @@
         }
       }
       .room-description {
-        align-items: center;
-        color: #2F486A;
-        display: flex;
+        @extend .buf1;
         font-size: 16px;
         height: 72px;
         left: 24px;
@@ -377,7 +373,6 @@
           }
           &.slick-arrow {
             background: url(../static/slider-arrow.svg) no-repeat center;
-            background-size: cover;
             height: 40px;
             width: 40px;
           }
@@ -389,7 +384,6 @@
           }
           &.slick-arrow {
             background: url(../static/slider-arrow-next.svg) no-repeat center;
-            background-size: cover;
             height: 40px;
             width: 40px;
           }
@@ -701,16 +695,14 @@
         width: 960px;
       }
       .text {
-        align-items: center;
-        color: #2F486A;
-        display: flex;
+        @extend .buf1;
         font-size: 20px;
         font-weight: 600;
         height: 96px;
         left: 20px;
         line-height: 32px;
         position: absolute;
-        top: 20px;
+        top: 0;
         width: 190px;
       }
       .image-frame {
@@ -736,15 +728,14 @@
         position: relative;
         width: 684.8px;
         .text {
-          align-items: center;
-          color: #2F486A;
-          display: flex;
+          @extend .buf1;
           font-size: 16px;
           font-weight: 500;
           height: 20px;
           line-height: 20px;
           position: absolute;
           width: 547px;
+          top: auto;
         }
         .arrow-down {
           background: url(../static/arrow-down.svg) no-repeat center;
@@ -814,9 +805,7 @@
         position: absolute;
         width: 233px;
         .vote-level {
-          align-items: center;
-          color: #2F486A;
-          display: flex;
+          @extend .buf1;
           font-weight: 600;
           height: 20px;
           line-height: 20px;
@@ -991,7 +980,6 @@
         line-height: 20px;
         padding: 0 13.5px;
         position: relative;
-        transform: scale(1.004) translateZ(0);
         width: 225px !important;
       }
     }
