--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -3,6 +3,7 @@
 @import "available.rooms.none";
 @import "available.rooms";
 @import "popup.room.info";
+@import "elements";
 body {
   --zoom: 0.8;
   background: #FAFBFC;
@@ -173,6 +174,7 @@ input[type=checkbox] {
 }
 .clickable {
   cursor: pointer;
+  user-select:none;
 }
 .rectangle-top {
   @extend .main-block;
@@ -657,16 +659,7 @@ input[type=checkbox] {
         top: 14px;
         width: 24px;
       }
-      .popup-select-guest {
-        background: #FFFFFF;
-        border-radius: 8px;
-        box-shadow: 0 2px 1px rgba(85, 89, 106, 0.0196802), 0 4px 2px rgba(85, 89, 106, 0.0282725), 0 6px 4px rgba(85, 89, 106, 0.035), 0 8px 8px rgba(85, 89, 106, 0.0417275), 0 18px 16px rgba(85, 89, 106, 0.0503198), 0 30px 40px rgba(85, 89, 106, 0.07);
-        height: 210px;
-        left: 0;
-        position: absolute;
-        top: 82px;
-        width: 356px;
-      }
+
     }
     .btn-search {
       height: 52px;
