--- a/src/style/popup-select-guest.scss
+++ b/src/style/popup-select-guest.scss
@@ -82,18 +82,7 @@
     transform: rotate(-180deg);
     z-index: 1;
   }
-  .line {
-    position: relative;
-    width: 324px;
-    height: 1px;
-    left: 4px;
-    top: 19px;
-    background: #DCDFE2;
-    flex: none;
-    order: 10;
-    align-self: center;
-    margin: 12px 12px;
-  }
+
   .apartment-blocks {
     height: 310px;
     overflow: auto;
@@ -106,13 +95,22 @@
       padding: 0;
       position: relative;
       width: 324px;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
+      .line {
+        position: relative;
+        width: 324px;
+        height: 1px;
+        top: 0px;
+        background: #DCDFE2;
+        align-self: center;
+        margin-top: 12px;
+      }
       .apartment-row {
         align-self: center;
         height: 62px;
         margin: 0 16px;
         position: relative;
-        top: 16px;
+        top: 12px;
         width: 324px;
         .frame-275 {
           flex-direction: column;
@@ -194,7 +192,7 @@
       }
       .child-age-row {
         position: relative;
-        top: 33px;
+        top: 28px;
         height: 36px;
         margin-bottom: 12px;
         .child-count-row {
