--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -22,6 +22,7 @@ body {
 }
 ::-webkit-scrollbar {
   width: 6px;
+  background: none;
 }
 ::-webkit-scrollbar-thumb {
   background: rgba(47, 72, 106, 0.25);
@@ -679,9 +680,9 @@ input[type=checkbox] {
           position: absolute;
           overflow: auto;
           height: 440px;
-          width: 305px;
+          width: 315px;
           top: 54px;
-          left: 115px;
+          left: 105px;
           .month {
             display: flex;
             flex-direction: column;
