--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -4,6 +4,7 @@
 @import "available.rooms";
 @import "popup.room.info";
 @import "elements";
+@import "reserve.room.window";
 body {
   --zoom: 0.8;
   background: #FAFBFC;
