--- a/src/style/reserve.room.window.scss
+++ b/src/style/reserve.room.window.scss
@@ -1,8 +1,8 @@
 .reserve-room-window {
   position: absolute;
   width: 272px;
-  left: 984px;
-  top: 143px;
+  left: 1454px;
+  top: 743px;
   background: #FFFFFF;
   border: 1px solid #DCDFE2;
   box-sizing: border-box;
@@ -200,7 +200,7 @@
     height: 1px;
     background: #DCDFE2;
     align-self: center;
-    margin: 12px auto;
+    margin: 0 auto;
     width: 100%;
   }
   .down-block {
