--- a/src/style/services.block.scss
+++ b/src/style/services.block.scss
@@ -1,6 +1,6 @@
 .services-block {
   position: relative;
-  .back-box {
+  .back-box-services {
     @extend .clickable;
     position: absolute;
     width: 206px;
@@ -26,6 +26,37 @@
       font-size: 14px;
       line-height: 20px;
       display: flex;
+      align-items: center;
+      color: rgba(47, 72, 106, 0.75);
+    }
+  }
+  .next-box-services {
+    @extend .clickable;
+    position: absolute;
+    width: 206px;
+    height: 38px;
+    right: 0px;
+    top: 12px;
+    z-index: 100;
+    background: #FAFBFC;
+    .next-arrow {
+      @extend .clickable;
+      position: absolute;
+      top: 12px;
+      right: 0px;
+    }
+    .next-page {
+      @extend .clickable;
+      position: absolute;
+      width: 167px;
+      height: 20px;
+      right: 30px;
+      top: calc(50% - 20px / 2);
+      font-weight: 600;
+      font-size: 14px;
+      line-height: 20px;
+      display: flex;
+      justify-content: flex-end;
       align-items: center;
       color: rgba(47, 72, 106, 0.75);
     }
@@ -98,7 +129,7 @@
           order: 0;
           align-self: center;
           margin: 8px 0;
-          &.price-blue{
+          &.price-blue {
             color: #267FF9;
           }
         }
@@ -202,6 +233,27 @@
           margin-bottom: 16px;
         }
       }
+    }
+  }
+  .button-subbmit {
+    @extend .clickable;
+    position: relative;
+    width: 268px;
+    height: 52px;
+    bottom: -140px;
+    background: #267FF9;
+    box-shadow: 0px 6px 12px rgba(38, 127, 249, 0.2), 0px 4px 6px rgba(38, 127, 249, 0.2);
+    border-radius: 4px;
+    margin: 42px auto;
+    .button-label {
+      position: relative;
+      font-weight: 600;
+      font-size: 16px;
+      line-height: 20px;
+      align-items: center;
+      text-align: center;
+      color: #FFFFFF;
+      top: 32%;
     }
   }
 }
