--- a/src/style/pay.parameters.scss
+++ b/src/style/pay.parameters.scss
@@ -467,7 +467,7 @@
         position: relative;
         left: -5px;
         label {
-          margin: 8px 0;
+          margin: 0 0 8px 0;
           input {
             width: 0px;
             height: 0px;
