--- a/src/style/pay.parameters.scss
+++ b/src/style/pay.parameters.scss
@@ -30,14 +30,11 @@
       color: rgba(47, 72, 106, 0.75);
     }
   }
-  .url {
-    @extend .clickable;
-    color: #267FF9;
-  }
+
   .pay-parameters-content {
     position: relative;
     width: 960px;
-    top: 75px;
+    top: 28px;
     .input {
       position: relative;
       display: inline-block;
@@ -105,7 +102,6 @@
         height: 20px;
         left: 24px;
         top: 24px;
-
       }
       .checkbox-label {
         position: absolute;
@@ -226,7 +222,7 @@
     }
     .rooms-list-block {
       position: relative;
-      top: 32px;
+      margin-top: 32px;
       .room-info {
         position: relative;
         width: 632px;
@@ -341,7 +337,7 @@
       position: relative;
       width: 632px;
       height: 504px;
-      top: 64px;
+      margin-top: 32px;
       background: #FFFFFF;
       box-shadow: 0px -2px 1px rgba(85, 89, 106, 0.0196802), 0px 2px 1px rgba(85, 89, 106, 0.0196802), 0px 4px 2px rgba(85, 89, 106, 0.0282725), 0px 6px 4px rgba(85, 89, 106, 0.035), 0px 8px 8px rgba(85, 89, 106, 0.0417275), 0px 18px 16px rgba(85, 89, 106, 0.0503198), 0px 30px 40px rgba(85, 89, 106, 0.07);
       border-radius: 8px;
@@ -467,7 +463,10 @@
         position: relative;
         left: -5px;
         label {
+          @extend .clickable;
           margin: 0 0 8px 0;
+          position: relative;
+          height: 17px;
           input {
             width: 0px;
             height: 0px;
@@ -486,6 +485,19 @@
                 background: url("../static/radio-selected.svg");
               }
             }
+          }
+          .caption {
+            position: absolute;
+            left: 35px;
+            top: 50%;
+            font-weight: 500;
+            font-size: 14px;
+            line-height: 24px;
+            display: flex;
+            align-items: center;
+            color: #2F486A;
+            margin: unset;
+            bottom: 22%;
           }
         }
       }
@@ -510,13 +522,14 @@
     }
     .down-title {
       position: relative;
-      top: 112px;
+      margin-top: 64px;
+      height: 60px;
     }
     .pay-way {
       position: relative;
       display: flex;
       flex-direction: row;
-      top: 200px;
+      margin-top: 32px;
       justify-content: space-between;
       .pay-item {
         width: 179px;
@@ -541,25 +554,6 @@
         }
       }
     }
-    .copyright {
-      position: relative;
-      width: 100%;
-      height: 24px;
-      font-weight: 500;
-      font-size: 14px;
-      line-height: 24px;
-      display: flex;
-      align-items: center;
-      text-align: center;
-      text-transform: uppercase;
-      top: 230px;
-      color: rgba(47, 72, 106, 0.5);
-      justify-content: center;
-      a{
-        color: #267FF9;
-        display: inline-block;
-        margin: 0 5px;
-      }
-    }
+
   }
 }
